[gd_scene load_steps=32 format=3 uid="uid://wn0ufqdo7dwj"]

[ext_resource type="Script" path="res://Camera.gd" id="1_to163"]
[ext_resource type="Script" path="res://LineEdit.gd" id="2_gphg1"]
[ext_resource type="Script" path="res://Perspective.gd" id="3_p46a0"]
[ext_resource type="PackedScene" uid="uid://bsaieocvuwi64" path="res://settings.tscn" id="4_0v8qm"]
[ext_resource type="Texture2D" uid="uid://l3fblw5emcb5" path="res://whiteFieldBackground.png" id="4_7c1g7"]
[ext_resource type="Script" path="res://Floor.gd" id="5_daa8j"]
[ext_resource type="Script" path="res://CurveControl.gd" id="5_nyvm8"]
[ext_resource type="PackedScene" uid="uid://cwsu1pmu0hkbh" path="res://Field.blend" id="6_2cl2j"]
[ext_resource type="Script" path="res://MovingBot.gd" id="7_g68l7"]
[ext_resource type="PackedScene" uid="uid://cs528w5hgukl8" path="res://Instuctions.tscn" id="9_oar3f"]
[ext_resource type="Script" path="res://BasicText.gd" id="10_ooii0"]

[sub_resource type="Animation" id="Animation_qhlin"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_6tml2"]
resource_name = "fade"
length = 3.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 1.5, 3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 1.5, 3)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 1.5, 3)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 1.5, 3)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t6lmx"]
_data = {
"RESET": SubResource("Animation_qhlin"),
"fade": SubResource("Animation_6tml2")
}

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_hcqjj"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_4ieei"]
sky_material = SubResource("ProceduralSkyMaterial_hcqjj")

[sub_resource type="Environment" id="Environment_p83l1"]
background_mode = 1
background_color = Color(0.203922, 0.203922, 0.203922, 1)
sky = SubResource("Sky_4ieei")
reflected_light_source = 2
tonemap_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hhotc"]
albedo_texture = ExtResource("4_7c1g7")

[sub_resource type="PlaneMesh" id="PlaneMesh_s0oqx"]
size = Vector2(12, 12)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_xrofh"]
data = PackedVector3Array(6, 0, 6, -6, 0, 6, 6, 0, -6, -6, 0, 6, -6, 0, -6, 6, 0, -6)

[sub_resource type="SphereShape3D" id="SphereShape3D_r8k1y"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_64wka"]
transparency = 1
albedo_color = Color(1, 0, 0, 0.541176)

[sub_resource type="BoxMesh" id="BoxMesh_eeb4p"]
material = SubResource("StandardMaterial3D_64wka")

[sub_resource type="Curve3D" id="Curve3D_enq53"]
_data = {
"points": PackedVector3Array(-0.98, -2.25, 0, -0.615, 0, -3.225, 0, 4.67, 0, -0.98, 0, -3.155, -0.615, 0, 0, -3.81, 4.565, 0),
"tilts": PackedFloat32Array(6.43, -1.39)
}
point_count = 2

[sub_resource type="Curve3D" id="Curve3D_wgsjr"]

[sub_resource type="BoxMesh" id="BoxMesh_aroxe"]

[sub_resource type="BoxMesh" id="BoxMesh_xcc6q"]
size = Vector3(0.2, 0.2, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_youo4"]
size = Vector3(1, 50, 40)

[sub_resource type="BoxShape3D" id="BoxShape3D_5aa6y"]
size = Vector3(1, 50, 36.8804)

[sub_resource type="BoxShape3D" id="BoxShape3D_0cok8"]
size = Vector3(40, 1, 40)

[sub_resource type="BoxShape3D" id="BoxShape3D_gjaa2"]
size = Vector3(1, 46.5679, 3.32532)

[node name="Node3D" type="Node3D"]

[node name="settings" parent="." instance=ExtResource("4_0v8qm")]

[node name="LineEdit" type="LineEdit" parent="settings"]
visible = false
layout_mode = 0
offset_left = 502.0
offset_top = 309.0
offset_right = 779.0
offset_bottom = 411.0
theme_override_font_sizes/font_size = 30
placeholder_text = "Input Number"
alignment = 1
select_all_on_focus = true
script = ExtResource("2_gphg1")

[node name="CopiedNotif" type="RichTextLabel" parent="settings"]
visible = false
layout_mode = 0
offset_left = 308.0
offset_top = 172.0
offset_right = 948.0
offset_bottom = 532.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]Code copied to clipboard!"

[node name="FadeAnimation" type="AnimationPlayer" parent="settings/CopiedNotif"]
libraries = {
"": SubResource("AnimationLibrary_t6lmx")
}

[node name="Control" parent="." instance=ExtResource("9_oar3f")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_p83l1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
light_energy = 0.6
shadow_enabled = true

[node name="Floor" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_hhotc")
lod_bias = 0.001
mesh = SubResource("PlaneMesh_s0oqx")
script = ExtResource("5_daa8j")

[node name="StaticBody3D" type="StaticBody3D" parent="Floor"]
transform = Transform3D(5, 0, 0, 0, 1, 0, 0, 0, 5, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_xrofh")

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.715398, 0)
script = ExtResource("1_to163")

[node name="Neck" type="Node3D" parent="CharacterBody3D"]

[node name="Camera3D" type="Camera3D" parent="CharacterBody3D/Neck"]
script = ExtResource("3_p46a0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
shape = SubResource("SphereShape3D_r8k1y")

[node name="ghostBox" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0580235, 0)
mesh = SubResource("BoxMesh_eeb4p")

[node name="Path3D" type="Path3D" parent="."]
curve = SubResource("Curve3D_enq53")
script = ExtResource("5_nyvm8")

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="."]
polygon = PackedVector2Array(0.02, 0, 0.014, -0.014, 0, -0.02, -0.014, -0.014, -0.02, 0, -0.014, 0.014, 0, 0.02, 0.014, 0.014)
mode = 2
path_node = NodePath("../Path3D")
path_interval_type = 0
path_interval = 0.1
path_simplify_angle = 0.0
path_rotation = 2
path_local = false
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="Field" parent="." instance=ExtResource("6_2cl2j")]
transform = Transform3D(3.275, 0, 0, 0, 3.275, 0, 0, 0, 3.275, 5.9892, -0.070402, 5.98893)

[node name="PathParts" type="Path3D" parent="."]
curve = SubResource("Curve3D_wgsjr")

[node name="PathFollow3D" type="PathFollow3D" parent="PathParts"]
transform = Transform3D(0.999996, 0, 0, 0, 0.999984, 0, 0, 0, 0.999995, 0, 0, 0)
rotation_mode = 0
use_model_front = true
cubic_interp = false

[node name="MovingBot" type="MeshInstance3D" parent="PathParts/PathFollow3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37116e-08, 0, 0, 0)
mesh = SubResource("BoxMesh_aroxe")
skeleton = NodePath("../../..")
script = ExtResource("7_g68l7")

[node name="Front" type="MeshInstance3D" parent="PathParts/PathFollow3D/MovingBot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
mesh = SubResource("BoxMesh_xcc6q")

[node name="Walls" type="Node3D" parent="."]

[node name="StaticBody3D" type="StaticBody3D" parent="Walls"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 25, 0)
shape = SubResource("BoxShape3D_youo4")

[node name="StaticBody3D2" type="StaticBody3D" parent="Walls"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 25, 0)
shape = SubResource("BoxShape3D_youo4")

[node name="StaticBody3D3" type="StaticBody3D" parent="Walls"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/StaticBody3D3"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.55981, 25, 20)
shape = SubResource("BoxShape3D_5aa6y")

[node name="StaticBody3D4" type="StaticBody3D" parent="Walls"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/StaticBody3D4"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 25, -20)
shape = SubResource("BoxShape3D_youo4")

[node name="StaticBody3D5" type="StaticBody3D" parent="Walls"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/StaticBody3D5"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 50, 0)
shape = SubResource("BoxShape3D_0cok8")

[node name="StaticBody3D6" type="StaticBody3D" parent="Walls"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/StaticBody3D6"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -18.2946, 23.2839, 20)
shape = SubResource("BoxShape3D_gjaa2")

[node name="BasicText" type="Label3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.0708146, 3.47768)
text = "↑↑↓↓←→←→"
script = ExtResource("10_ooii0")

[connection signal="mouse_entered" from="settings/LineEdit" to="settings/LineEdit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="settings/LineEdit" to="settings/LineEdit" method="_on_mouse_exited"]
[connection signal="text_submitted" from="settings/LineEdit" to="settings/LineEdit" method="_on_text_submitted"]
